# Mtb-ISEMapper

./: .gitignore  README.md  pyproject.toml
InputData_TSVs/: TestSample.R31919.FQs.Try2.tsv  TestSample.R31919.FQs.tsv  TestSamples.1CI.tsv  TestSamples.2CI.tsv  TestSamples.Try2.FQs.tsv  rollingdbcomplete16122023_head1000.tsv
config/: IS6110.Pipeline.ClusterConfig.json  IS6110.Pipeline.config.V2.json  IS6110.Pipeline.config.json
slurm/: config.yaml
workflow/: Snakefile  snk.config.yaml
workflow/envs/: ISmapper_env.nobuilds.yml  ISmapper_env.yml
workflow/scripts/: DepthTXTtoPeaks.V3.py  processDepthToAnnoPeaks.V1.py
