[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mtb_isem"
description = "Package for analysis of IS6110 insertions in the genomes of Mtb isolates"
version = "0.0.0"
authors = [
    { name = "Maximillian Marin", email = "maximilliangmarin@gmail.com" }
]

requires-python = ">=3.7"
dependencies = [
	"pandas",
	"numpy",
	"scipy",
	"tqdm",
	"importlib-metadata; python_version < '3.8'"
]

[project.optional-dependencies]
test = [
	"pytest"
]

[project.urls]
"Homepage" = "https://github.com/maxgmarin/Mtb-ISEMapper"